log
Sat, May 17, 2025 12:15:14 AM: 
 sudoku.c | 21 +++++++++++++++++++++
 1 file changed, 21 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:71:13: error: implicit declaration of function 'append' [-Werror=implicit-function-declaration]
             append(list, adj_node);
             ^~~~~~
cc1.exe: all warnings being treated as errors
3f0e54c
